fix the alignment issues

--- a/src/out_patients/modules/billing/submodules/billing/submodules/services/services.component.scss
+++ b/src/out_patients/modules/billing/submodules/billing/submodules/services/services.component.scss
@@ -4,6 +4,7 @@
     background-color: #45c0be;
     height: max-content;
     height: 95.5%;
+
     button {
       background-color: #bfe8e7;
       height: 32px;
@@ -11,6 +12,11 @@
       &.active {
         background-color: #fff;
       }
+    }
+  }
+  .services-tab-container {
+    ::ng-deep .mat-error {
+      display: none !important;
     }
   }
 }
